background – color, image, repeat

--- a/index.html
+++ b/index.html
@@ -5,15 +5,44 @@
     <title>CSS</title>
     <!-- external style -->
     <link rel="stylesheet" href="css/master.css" />
-
-    <!-- internal style -->
-    <style>
-      .special {
-      }
-    </style>
   </head>
   <body>
-    <!-- inline style -->
-    <p style="color: purple" class="special">Hello World</p>
+    <div>
+      <h3>Project title</h3>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+      <p>this is a paragraph</p>
+    </div>
   </body>
 </html>
