--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div>
-      <h3>Project title</h3>
-      <p>this is a paragraph</p>
-    </div>
+    <span>span => block</span>
+    <span>span => block</span>
+    <span>span => block</span>
+    <div>block</div>
   </body>
 </html>
