element visibility and use cases

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <span>span => block</span>
-    <span>span => block</span>
-    <span>span => block</span>
-    <div>block</div>
+    <div class="first">div</div>
+    <div class="second">div</div>
   </body>
 </html>
