--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div class="first">div</div>
-    <div class="second">div</div>
+    <div class="one">one</div>
+    <div class="two">two</div>
+    <div class="three">three</div>
+    <div class="four">four</div>
+    <p>this is paragraph</p>
   </body>
 </html>
