--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div class="one">one</div>
-    <div class="two">two</div>
-    <div class="three">three</div>
-    <div class="four">four</div>
-    <p>this is paragraph</p>
+    <div>
+      <h2>Title</h2>
+      <p>Paragraph inside div</p>
+      <p class="special">Paragraph inside div</p>
+    </div>
+    <div>
+      <p class="special">Paragraph outside div</p>
+    </div>
   </body>
 </html>
