dimensions - width and height

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
+    <div>Mohamed CHIBANI</div>
+    <hr />
+    <div>Mohamed CHIBANI Abdelkader</div>
+    <hr />
     <div>
-      <h2>Title</h2>
-      <p>Paragraph inside div</p>
-      <p class="special">Paragraph inside div</p>
-    </div>
-    <div>
-      <p class="special">Paragraph outside div</p>
+      Mohamed CHIBANI Abdelkader Mohamed Mohamed Mohamed Mohamed Mohamed Mohamed
     </div>
   </body>
 </html>
