overflow - overflow-x and overflow-y

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div>Mohamed CHIBANI</div>
-    <hr />
-    <div>Mohamed CHIBANI Abdelkader</div>
-    <hr />
     <div>
-      Mohamed CHIBANI Abdelkader Mohamed Mohamed Mohamed Mohamed Mohamed Mohamed
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint
+      illum aperiam tenetur suscipit quae! illum aperiam tenetur suscipit quae!
     </div>
   </body>
 </html>
