text - color and shadow

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint
-      illum aperiam tenetur suscipit quae! illum aperiam tenetur suscipit quae!
-    </div>
+    <div>ABCDE</div>
   </body>
 </html>
