--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div>ABCDE</div>
+    <div>
+      Lorem ipsum dolor sit <img src="/imgs/MainAfter.webp" alt="" /> amet
+    </div>
   </body>
 </html>
