text - decoration and transform

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div>
-      Lorem ipsum dolor sit <img src="/imgs/MainAfter.webp" alt="" /> amet
-    </div>
+    <div>Lorem ipsum dolor sita amet</div>
   </body>
 </html>
