text - overflow and use cases

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div>
-      https://www.youtube.com/watch?v=Gpg0lvxRMvI&list=RDGpg0lvxRMvI&start_radio=1
+    <div title=" Lorem ipsum dolor sita ame">
+      Lorem ipsum dolor sita ametLorem ipsum dolor sita ametLorem ipsum dolor
     </div>
   </body>
 </html>
