--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
-    <div title=" Lorem ipsum dolor sita ame">
-      Lorem ipsum dolor sita ametLorem ipsum dolor sita ametLorem ipsum dolor
+    <div>
+      <h3>Welcome to school</h3>
+      <p>
+        Lorem ipsum dolor sita ametLorem ipsum dolor sita ametLorem ipsum dolor
+      </p>
     </div>
   </body>
 </html>
