typography - font family

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title>CSS</title>
     <!-- external style -->
     <link rel="stylesheet" href="css/master.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div>
-      <h3>Welcome to school</h3>
-      <p>
-        Lorem ipsum dolor sita ametLorem ipsum dolor sita ametLorem ipsum dolor
-      </p>
-    </div>
+    <div class="serif">Lorem ipsum dolor sita ametLorem, Hello F</div>
+    <div class="sans-serif">Lorem ipsum dolor sita ametLorem, Hello F</div>
   </body>
 </html>
