typography - font size and css units

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
   </head>
   <body>
-    <div class="serif">Lorem ipsum dolor sita ametLorem, Hello F</div>
-    <div class="sans-serif">Lorem ipsum dolor sita ametLorem, Hello F</div>
+    <div class="serif">
+      Lorem ipsum dolor sita ametLorem,<span>Hello F</span>
+    </div>
   </body>
 </html>
