typography - font style and variant and weight

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     />
   </head>
   <body>
-    <div class="serif">
-      Lorem ipsum dolor sita ametLorem,<span>Hello F</span>
-    </div>
+    <div>Lorem ipsum dolor sita ametLorem</div>
   </body>
 </html>
