--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     />
   </head>
   <body>
-    <div>Lorem ipsum dolor sita ametLorem</div>
+    <a href="">Google</a>
+    <span>Test</span>
+    <button>Click</button>
+    <hr />
+    <p>Test P</p>
+    <p>Test P</p>
+    <p>Test P</p>
   </body>
 </html>
