float and clear

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     />
   </head>
   <body>
-    <a href="">Google</a>
-    <span>Test</span>
-    <button>Click</button>
-    <hr />
-    <p>Test P</p>
-    <p>Test P</p>
-    <p>Test P</p>
+    <div class="parent">
+      <div>Product 1</div>
+      <div>Product 2</div>
+      <div>Product 3</div>
+      <div>Product 4</div>
+      <p class="clear"></p>
+    </div>
+    <p>Paragraph for testing</p>
   </body>
 </html>
