--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     />
   </head>
   <body>
-    <div>Product 1</div>
-    <div>Product 2</div>
-    <div>Product 3</div>
-    <div>Product 4</div>
-    <div>Product 5</div>
+    <div class="one">Avec opacité => opacité à tout le contenu</div>
+    <div class="two">
+      Avec Alpha backgound color => opacité s'applique uniquement au bg
+    </div>
   </body>
 </html>
