--- a/index.html
+++ b/index.html
@@ -13,87 +13,8 @@
     />
   </head>
   <body>
-    <!-- <div class="two">Two</div>
-    <div class="parent">
-      <div class="one">One</div>
-    </div> -->
-
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-
-    <div>Sticky Scroll</div>
-
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
-
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus odio
-      dolorum eveniet, totam assumenda debitis temporibus, provident quod
-      exercitationem, sint quisquam fugit! Corrupti, in harum. Sed perspiciatis
-      corporis nemo error harum repellat earum dicta velit nihil nesciunt itaque
-      similique, aspernatur sint ut assumenda laudantium iste illo eius
-      laboriosam necessitatibus delectus!
-    </p>
+    <div class="one">One</div>
+    <div class="two">Two</div>
+    <div class="three">Three</div>
   </body>
 </html>
