--- a/index.html
+++ b/index.html
@@ -13,16 +13,31 @@
     />
   </head>
   <body>
-    <h3>Programming</h3>
-    <ul>
-      <li>HTML</li>
-      <li>Css</li>
-      <li>Javascript</li>
-      <ul>
-        <li>React.js</li>
-        <li>Vue.js</li>
-        <li>Angular</li>
-      </ul>
-    </ul>
+    <table>
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Age</td>
+          <td>Email</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mohamed</td>
+          <td>27</td>
+          <td>mohamed@mail.com</td>
+        </tr>
+        <tr>
+          <td>Amine</td>
+          <td>21</td>
+          <td>mohamed@mail.com</td>
+        </tr>
+        <tr>
+          <td>Zaineb</td>
+          <td>24</td>
+          <td>zaineb@mail.com</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
