--- a/index.html
+++ b/index.html
@@ -13,31 +13,20 @@
     />
   </head>
   <body>
-    <table>
-      <thead>
-        <tr>
-          <td>Name</td>
-          <td>Age</td>
-          <td>Email</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Mohamed</td>
-          <td>27</td>
-          <td>mohamed@mail.com</td>
-        </tr>
-        <tr>
-          <td>Amine</td>
-          <td>21</td>
-          <td>mohamed@mail.com</td>
-        </tr>
-        <tr>
-          <td>Zaineb</td>
-          <td>24</td>
-          <td>zaineb@mail.com</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="one">Normal element</div>
+    <div class="two"></div>
+    <p></p>
+    <hr />
+    <a href="https://google.com">Google</a>
+    <a href="https://x.com"">X</a>
+    <a href="https://youtube.com"">Youtube</a>
+    <hr />
+    <form action="">
+      <div><input class="in" type="text" /></div>
+      <div>
+        <input class="ch" type="checkbox" />
+        <label for="">testing check</label>
+      </div>
+    </form>
   </body>
 </html>
