pseudo elements - first letter, first line, selection

--- a/index.html
+++ b/index.html
@@ -13,20 +13,33 @@
     />
   </head>
   <body>
-    <div class="one">Normal element</div>
-    <div class="two"></div>
-    <p></p>
+    <div class="one">
+      <span>L</span>orem ipsum dolor sit amet consectetur adipisicing elit.
+      Labore debitis, architecto ab, aliquid distinctio dolores incidunt nulla
+      et quia eaque necessitatibus veniam unde officiis maiores laudantium quasi
+      laboriosam corporis saepe ut blanditiis officia adipisci sunt rerum
+      commodi. Qui, numquam a.
+    </div>
     <hr />
-    <a href="https://google.com">Google</a>
-    <a href="https://x.com"">X</a>
-    <a href="https://youtube.com"">Youtube</a>
+    <div class="two">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis,
+      architecto ab, aliquid distinctio dolores incidunt nulla et quia eaque
+      necessitatibus veniam unde officiis maiores laudantium quasi laboriosam
+      corporis saepe ut blanditiis officia adipisci sunt rerum commodi. Qui,
+      numquam a.
+    </div>
     <hr />
-    <form action="">
-      <div><input class="in" type="text" /></div>
-      <div>
-        <input class="ch" type="checkbox" />
-        <label for="">testing check</label>
-      </div>
-    </form>
+    <p class="three">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+      ducimus hic ex magnam necessitatibus, quis iure? A commodi ipsa aperiam
+      saepe similique, quidem rem, exercitationem porro autem omnis quam hic!
+      Rerum, a atque quisquam facilis exercitationem ad qui quod repudiandae?
+    </p>
+    <p class="four">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+      ducimus hic ex magnam necessitatibus, quis iure? A commodi ipsa aperiam
+      saepe similique, quidem rem, exercitationem porro autem omnis quam hic!
+      Rerum, a atque quisquam facilis exercitationem ad qui quod repudiandae?
+    </p>
   </body>
 </html>
