--- a/index.html
+++ b/index.html
@@ -13,33 +13,39 @@
     />
   </head>
   <body>
-    <div class="one">
-      <span>L</span>orem ipsum dolor sit amet consectetur adipisicing elit.
-      Labore debitis, architecto ab, aliquid distinctio dolores incidunt nulla
-      et quia eaque necessitatibus veniam unde officiis maiores laudantium quasi
-      laboriosam corporis saepe ut blanditiis officia adipisci sunt rerum
-      commodi. Qui, numquam a.
+    <div class="parent">
+      <div class="user">O</div>
+
+      <div class="one">
+        <span>L</span>orem ipsum dolor sit amet consectetur adipisicing elit.
+        Labore debitis, architecto ab, aliquid distinctio dolores incidunt nulla
+        et quia eaque necessitatibus veniam unde officiis maiores laudantium
+        quasi laboriosam corporis saepe ut blanditiis officia adipisci sunt
+        rerum commodi. Qui, numquam a.
+      </div>
     </div>
     <hr />
-    <div class="two">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis,
-      architecto ab, aliquid distinctio dolores incidunt nulla et quia eaque
-      necessitatibus veniam unde officiis maiores laudantium quasi laboriosam
-      corporis saepe ut blanditiis officia adipisci sunt rerum commodi. Qui,
-      numquam a.
+    <div class="parent">
+      <div class="user">A</div>
+
+      <div class="two">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis,
+        architecto ab, aliquid distinctio dolores incidunt nulla et quia eaque
+        necessitatibus veniam unde officiis maiores laudantium quasi laboriosam
+        corporis saepe ut blanditiis officia adipisci sunt rerum commodi. Qui,
+        numquam a.
+      </div>
     </div>
     <hr />
-    <p class="three">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-      ducimus hic ex magnam necessitatibus, quis iure? A commodi ipsa aperiam
-      saepe similique, quidem rem, exercitationem porro autem omnis quam hic!
-      Rerum, a atque quisquam facilis exercitationem ad qui quod repudiandae?
-    </p>
-    <p class="four">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-      ducimus hic ex magnam necessitatibus, quis iure? A commodi ipsa aperiam
-      saepe similique, quidem rem, exercitationem porro autem omnis quam hic!
-      Rerum, a atque quisquam facilis exercitationem ad qui quod repudiandae?
-    </p>
+    <div class="parent">
+      <div class="user">E</div>
+
+      <div class="three">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+        ducimus hic ex magnam necessitatibus, quis iure? A commodi ipsa aperiam
+        saepe similique, quidem rem, exercitationem porro autem omnis quam hic!
+        Rerum, a atque quisquam facilis exercitationem ad qui quod repudiandae?
+      </div>
+    </div>
   </body>
 </html>
