pseudo elements - content and trainings

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="parent">
       <div class="user">O</div>
 
-      <div class="one">
-        <span>L</span>orem ipsum dolor sit amet consectetur adipisicing elit.
-        Labore debitis, architecto ab, aliquid distinctio dolores incidunt nulla
-        et quia eaque necessitatibus veniam unde officiis maiores laudantium
-        quasi laboriosam corporis saepe ut blanditiis officia adipisci sunt
-        rerum commodi. Qui, numquam a.
+      <div class="one" data-text="Something">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis,
+        architecto ab, aliquid distinctio dolores incidunt nulla et quia eaque
+        necessitatibus veniam unde officiis maiores laudantium quasi laboriosam
+        corporis saepe ut blanditiis officia adipisci sunt rerum commodi. Qui,
+        numquam a.
       </div>
     </div>
     <hr />
     <div class="parent">
       <div class="user">A</div>
 
-      <div class="two">
+      <div class="one">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis,
         architecto ab, aliquid distinctio dolores incidunt nulla et quia eaque
         necessitatibus veniam unde officiis maiores laudantium quasi laboriosam
@@ -40,12 +40,21 @@
     <div class="parent">
       <div class="user">E</div>
 
-      <div class="three">
+      <div class="one">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
         ducimus hic ex magnam necessitatibus, quis iure? A commodi ipsa aperiam
         saepe similique, quidem rem, exercitationem porro autem omnis quam hic!
         Rerum, a atque quisquam facilis exercitationem ad qui quod repudiandae?
       </div>
     </div>
+    <hr />
+    <ul>
+      <li>One</li>
+      <li>One</li>
+      <li>One</li>
+      <li>One</li>
+      <li>One</li>
+      <li>One</li>
+    </ul>
   </body>
 </html>
