the box model and box sizing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     />
   </head>
   <body>
-    <div>Eelement</div>
+    <div class="parent">
+      <div class="one">Element One</div>
+      <div class="one">Element One</div>
+    </div>
   </body>
 </html>
