!important declaration and use cases

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     />
   </head>
   <body>
-    <div class="parent">
-      <div class="one">Element One</div>
-    </div>
+    <div class="one" style="background-color: red">One</div>
   </body>
 </html>
