the margin collapse

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     />
   </head>
   <body>
-    <div class="one" style="background-color: red">One</div>
+    <div class="parent">
+      <div class="one"></div>
+      <div class="two">
+        <div class="test">
+          <div class="up"></div>
+        </div>
+        <div class="down"></div>
+      </div>
+    </div>
   </body>
 </html>
