flex box parent - direction, wrap, flow

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
     />
   </head>
   <body>
-    <div class="parent">
-      <div class="one"></div>
-      <div class="two">
-        <div class="test">
-          <div class="up"></div>
-        </div>
-        <div class="down"></div>
-      </div>
+    <h3>Flex</h3>
+    <div class="flex">
+      <div>One</div>
+      <div>Two</div>
+      <div>Three</div>
+      <div>Four</div>
+      <div>Five</div>
+    </div>
+
+    <h3>Float</h3>
+    <div class="float">
+      <div>One</div>
+      <div>Two</div>
+      <div>Three</div>
+      <div>Four</div>
+      <div>Five</div>
     </div>
   </body>
 </html>
