flex box parent - justify content

--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
       <div>One</div>
       <div>Two</div>
       <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
     </div>
 
     <h3>Float</h3>
     <div class="float">
       <div>One</div>
-      <div>Two</div>
+      <div class="two">Two</div>
       <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
     </div>
   </body>
 </html>
