--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
   <body>
     <h3>Flex</h3>
     <div class="flex">
-      <div>One</div>
-      <div>Two</div>
-      <div>Three</div>
+      <div class="one">One</div>
+      <div class="two">Two</div>
+      <div class="three">Three</div>
     </div>
 
     <h3>Float</h3>
     <div class="float">
-      <div>One</div>
+      <div class="one">One</div>
       <div class="two">Two</div>
-      <div>Three</div>
+      <div class="three">Three</div>
     </div>
+
+    <div class="center">Center</div>
+    <div class="old-center">Center</div>
   </body>
 </html>
