flex box parent - align content

--- a/index.html
+++ b/index.html
@@ -18,16 +18,8 @@
       <div class="one">One</div>
       <div class="two">Two</div>
       <div class="three">Three</div>
+      <div class="three">Four</div>
+      <div class="three">Five</div>
     </div>
-
-    <h3>Float</h3>
-    <div class="float">
-      <div class="one">One</div>
-      <div class="two">Two</div>
-      <div class="three">Three</div>
-    </div>
-
-    <div class="center">Center</div>
-    <div class="old-center">Center</div>
   </body>
 </html>
