--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     />
   </head>
   <body>
-    <h3>Flex</h3>
     <div class="flex">
-      <div class="one">One</div>
+      <div style="order: 6" class="one">One</div>
       <div class="two">Two</div>
       <div class="three">Three</div>
       <div class="three">Four</div>
@@ -23,3 +22,4 @@
     </div>
   </body>
 </html>
+flex box child - grow, shrink, order
