--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <div class="flex">
-      <div style="order: 6" class="one">One</div>
-      <div class="two">Two</div>
+      <div class="one">One</div>
+      <div style="flex-basis: 300px" class="two">Two</div>
       <div class="three">Three</div>
       <div class="three">Four</div>
       <div class="three">Five</div>
     </div>
+    <div class="in">In</div>
   </body>
 </html>
-flex box child - grow, shrink, order
