--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <div class="flex">
-      <div class="one">One</div>
-      <div style="flex-basis: 300px" class="two">Two</div>
-      <div class="three">Three</div>
-      <div class="three">Four</div>
-      <div class="three">Five</div>
+      <div class="one">1</div>
+      <div class="two">2</div>
+      <div class="three">3</div>
+      <div class="three">4</div>
+      <div class="three">5</div>
+      <div class="three">6</div>
     </div>
-    <div class="in">In</div>
   </body>
 </html>
