--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
     />
   </head>
   <body>
-    <div class="flex">
-      <div class="one">1</div>
-      <div class="two">2</div>
-      <div class="three">3</div>
-      <div class="three">4</div>
-      <div class="three">5</div>
-      <div class="three">6</div>
-    </div>
+    <img src="imgs/MainAfter.webp" alt="" />
   </body>
 </html>
