pointer events and caret color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     />
   </head>
   <body>
-    <div>Gradient</div>
+    <input type="text" />
+    <a href="google.com">Google</a>
+    <p contenteditable="true">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint pariatur
+      rerum tenetur nostrum? Praesentium ex fugit sunt quas, esse dignissimos?
+    </p>
   </body>
 </html>
