--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
     />
   </head>
   <body>
-    <div class="page">
-      <h2>CHIBANI</h2>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Services</li>
-          <li>About</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
-      <section>Content</section>
-      <aside>Sidebar</aside>
-      <footer>Footer</footer>
+    <div class="parent">
+      <div class="one">1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div class="eight">8</div>
+      <div>9</div>
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div class="four">4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
     </div>
   </body>
 </html>
