--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div>5</div>
       <div>6</div>
       <div>7</div>
-      <div class="eight">8</div>
-      <div>9</div>
+      <div>8</div>
+      <div class="nine">9</div>
       <div>1</div>
       <div>2</div>
       <div>3</div>
