--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <body>
     <div class="parent">
       <div class="one">1</div>
-      <div>2</div>
-      <div>3</div>
+      <div class="two">2</div>
+      <div class="three">3</div>
       <div>4</div>
       <div>5</div>
       <div>6</div>
       <div>7</div>
       <div>8</div>
-      <div class="nine">9</div>
+      <div>9</div>
       <div>1</div>
       <div>2</div>
       <div>3</div>
-      <div class="four">4</div>
+      <div>4</div>
       <div>5</div>
       <div>6</div>
       <div>7</div>
